feat: correctly support string responses (like text/plain)
